--- a/TODO.txt
+++ b/TODO.txt
@@ -36,7 +36,9 @@ TODO:
 
 				time: (266 - 249 + 1) = 18 frames -> .6s 
 				height (from throw base to peak): (513 - 648) + 1 = 136 pixels; -> 136/1080 *2  = .251851
-				how far (half): (1017 - 798) + 1 = 220; -> 220/1920 * 2.714 = 0.31097;
+				how far: 1600 - 1261 + 1 =  340/1920 * 2.714 = .4806
+
+				i need this to go from 0 to .4806/2 in .3s -> the speed is 
 
 				y: 
 					up: upCurve * height
@@ -46,12 +48,17 @@ TODO:
 				x += playerPos.x;
 				y += playerPos.y;
 
+				What i need to do:
+					have an accumulator for the time: 
+						from 0 to the time we want -> normalize it to range 0 -> 1, accumulatortime/wantedtime
+
 			second hop:
 				peak = (1418, 662)
 				bounce base = (1261, 742)
 				time: (284 - 267 + 1) = 18 frames -> .6s
 				height: 742 - 662 + 1 = 81 -> 81/1080 *2 = .15
-				how far: 1600 - 1261 + 1 =  340/1920 * 2.714 = .4806
+				how far (half): (1017 - 798) + 1 = 220; -> 220/1920 * 2.714 = 0.31097;
+
 
 				y: 
 					up: upCurve * height
@@ -61,12 +68,8 @@ TODO:
 				x += groundHit.x;
 				y += groundHit.y;
 
-			Current the old jumping method that we use does not adjust the speed of the interpolation using specific time frame (1h) [] @Current 
+			Currently the old jumping method that we use does not adjust the speed of the interpolation using specific time frame (1h) [X] @Current 
 			but instead use the specific speed that seems good 
-			-> Make the speed depends on the time frame instead 
-			-> Meaning the t will go from 0 to 1 in a specific time 
-
-			OR just have a function to calculate the speed needed from duration input @Dothis
 
 		grenade animation (1 frame) [X]
 
@@ -91,6 +94,10 @@ TODO:
 		-> Figure out what's the knock back curve looks like 
 
 	LOAD THE LEVEL METADATA (JSON) FROM A FILE SO THAT NO NEED TO RECOMPILE (4h) []
+
+	THE X AXIS CONVERSION SEEMS NOT SUPER ACCURATE (The background thing is off my a few pixels ?) (2h) []
+
+	ONLY LOAD THE GAME ASSETS ONCE AT THE START OF THE LEVEL (2h) []
 
 	HAVE A FRAMEWORK FOR CREATING AN ENTITY IN THE GAME (4h): []
 		AN ENTITY IN THE GAME INCLUDES: 
@@ -133,7 +140,6 @@ TODO:
 				THE HOUSES (1h) [] @Later
 			INTO THE LEVEL 
 
-
 	THE CAMERA THAT FOLLOWS THE PLAYER HAVE SOME TWEENING (2h) [] 
 		this is the link to the easing video: https://www.youtube.com/watch?v=zLh0K1PdUbc&ab_channel=CodingMath
 
@@ -158,6 +164,8 @@ TODO:
 	INPUT BUFFERING FOR GAMEPLAY MOVEMENT (4h) []
 
 	CLEAN THE PROJECT STRUCTOR: EACH BACKEND IN IT'S OWN FOLDER (1h) []
+
+	INPUT TIMING (FOR VARIABLE JUMP AND ANIMATION TRANSITION AND STUFF) (4h) []
 
 	WHEN SHOULD WE WRITE A LEVEL EDITOR ?? []
 		-> when level1 done, have proper structure for a level, a separate file for level 
