separate the rebel soider physic state machine into a separate class

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,18 @@
 TODO:  
+	HAVE A GENERAL STATE MACHINE CLASS THAT CAN BE REUSE (2h) [] @Current
+		what all the state machine have in common ??: 
+			the current state 
+			states actions 
+			the transition event 
+			the transitions works 
+
+		What currently bundling between the states ??: 
+			...
+
+		how the api should be used ??: 
+			i want the common behaviour can be resuse (physic state machine,...) 100%
+			for now let's just remove the physic state machine and try to get that out and put them back in the hostage and the enemy  
+
 	BASIC PLAYER THROWING GRENADE (with animation) (2h) []
 		GRENADE ALSO HAVE 2 STATE MACHINE: 
 			Physic state machine
@@ -79,19 +93,6 @@ TODO:
 		-> let's make the button can register 3 state -> pressed and down and wasdown [X]
 		-> figure out how to register the pressed event [] @Later 
 
-	HAVE A GENERAL STATE MACHINE CLASS THAT CAN BE REUSE (2h) [] 
-		what all the state machine have in common ??: 
-			the current state 
-			states actions 
-			the transition event 
-			the transitions works 
-
-		What currently bundling between the states ??: 
-			...
-
-		how the api should be used ??: 
-			... 
-
 	HAVE A FRAMEWORK FOR CREATING AN ENTITY IN THE GAME (4h): []
 		AN ENTITY IN THE GAME INCLUDES: 
 			COLLIDER 
@@ -110,6 +111,7 @@ TODO:
 	ENEMY THROWING GRENADE (with animation) (2h) []
 
 	PLAYER SHOOTING (2h) [] 
+		in all 4 directions 
 
 	CHANGE THE PLAYER JUMPING MECHANISM WITH THE NEW MECHANISM (GRENADE BOUNCE) (1h) []
 
