--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 TODAY: 
 	PLAYER SHOOTING (2h) [] 
-		in all 3 directions (right, left, up) (2h) [] @Later 
+		in all 3 directions (right, left, up) (2h) [] 
 			pts [] @Current 
 			add the animation into the player animation [X] 
 
@@ -132,7 +132,7 @@ TODO:
 	DESTROY ALL THE FONT RESOURCES AFTER USING (SDL DESTROY) -> CURRENTLY HAVE MEMORY LEAKS (1H) []
 
 BUG: 
-	FIXME: the shifting x after die is having bug (why the finish oneccycle doesn't set to true ??)
+	FIXME: the shifting x after die is having bug (why the finish oneccycle doesn't set to true ??) (2h) []
 
 	FIXME: collision on the hortizontal side not working ?? 
 		-> this happens because the game only checking a single collision at a time  
