--- a/TODO.txt
+++ b/TODO.txt
@@ -1,15 +1,21 @@
 TODAY: 
 	PLAYER SHOOTING (4h) [] 
 		in all 3 directions (right, left, up) (2h) [] 
-			pts [] @Current 
-			bullet sprite []
-			add the animation into the player animation [X] 
+			pts [X] 
+				right/left - 0, 168, 52, 29
+				up - 0, 197, 30, 65
+			bullet sprite [X] - 74, 476, 12, 11
+			add the animation into the player animation [] @Current
+
 		let's clean the animation state machine code (2h) [X] 
 			-> refactor the transition code so that it way more comfortable to use (4h) [X] 
+
 TODO:  
 	LET THE THROWING ANIMATION FINISH (1h) []
 
 	ENEMY THROWING GRENADE (with animation) (2h) [] 
+
+	Idea: THERE ARE CERTAIN OBSCURITY WHEN USING COMMONTRANSITION METHOD (should have better name or just expand them all out) ?? 
 
 	Idea: should all the input handling in the player.cpp file and then transfered to other files 
 		so that we don't often miss understand between the throwing bomb input in the playerAnimation 
